--- a/.github/workflows/flamegraph_reporter.yaml
+++ b/.github/workflows/flamegraph_reporter.yaml
@@ -169,6 +169,12 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
+      
+      - name: Check disk usage
+        run: df -h
+
+      - name: Check for large files
+        run: sudo du -ah / | sort -rh | head -n 20
 
       - name: Rustup toolchain install
         uses: dtolnay/rust-toolchain@stable
@@ -244,6 +250,12 @@ jobs:
             echo "$HOME/.cargo/bin/inferno-collapse-perf" already found
           fi
 
+      - name: Check disk usage
+        run: df -h
+
+      - name: Check for large files
+        run: sudo du -ah / | sort -rh | head -n 20
+
       - name: Install ethrex_l2 cli
         run: |
           if [ -f "$HOME/.cargo/bin/ethrex_l2" ]; then
@@ -253,6 +265,12 @@ jobs:
           fi
           ethrex_l2 config create default --default
           ethrex_l2 config set default
+
+      - name: Check disk usage
+        run: df -h
+
+      - name: Check for large files
+        run: sudo du -ah / | sort -rh | head -n 20
 
       # By default ethrex uses revm as evm backend.
       - id: generate-flamegraph-ethrex
@@ -270,6 +288,9 @@ jobs:
           echo "Compilation finished. Executing load test..."
           bash /home/runner/work/ethrex/ethrex/.github/scripts/flamegraph_watcher.sh &&
           echo "Load test finished"
+
+      - name: Check disk usage
+        run: df -h
 
       - name: Generate SVG
         shell: bash
