chore: add perf changelog entry

--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -26,6 +26,11 @@ jobs:
       - name: Caching
         uses: Swatinem/rust-cache@v2
 
+      - name: Install CMake
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake
+
       - name: Run L2 integration test
         run: |
           cd crates/l2
