--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -11,6 +11,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
+env:
+  CI_ETHREX_WORKDIR: /usr/local/bin
+
 jobs:
   test:
     # "Integration Test" is a required check, don't change the name
