--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -36,6 +36,7 @@ jobs:
         uses: docker/bake-action@v6
         with:
           workdir: "crates/l2"
+          files: "crates/l2/docker-compose-l2.yaml"
           load: true
           set: |
             *.cache-to=type=gha,mode=max
