change some things for debugging...

--- a/.github/workflows/flamegraph_reporter.yaml
+++ b/.github/workflows/flamegraph_reporter.yaml
@@ -31,16 +31,16 @@ jobs:
         with:
           toolchain: ${{ env.RUST_VERSION }}
 
-      - name: Cache Extra Binaries
-        id: cache-binaries
-        uses: actions/cache@v4
-        with:
-          path: |
-            ${{ env.HOME }}/.cargo/bin/addr2line
-            ${{ env.HOME }}/.cargo/bin/flamegraph
-            ${{ env.HOME }}/.cargo/bin/inferno-*
-            ${{ env.HOME }}/ethrex/ethrex/cmd/ef_tests/state/vectors
-          key: ${{ runner.os }}-${{ env.RUST_VERSION }}-extra-binaries
+      # - name: Cache Extra Binaries
+      #   id: cache-binaries
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: |
+      #       ${{ env.HOME }}/.cargo/bin/addr2line
+      #       ${{ env.HOME }}/.cargo/bin/flamegraph
+      #       ${{ env.HOME }}/.cargo/bin/inferno-*
+      #       ${{ env.HOME }}/ethrex/ethrex/cmd/ef_tests/state/vectors
+      #     key: ${{ runner.os }}-${{ env.RUST_VERSION }}-extra-binaries
 
       - name: Change perf settings
         run: |
@@ -180,10 +180,6 @@ jobs:
           sudo rm -rf /usr/local/lib/android
           echo "Android SDK removed."
 
-          # Remove CodeQL
-          sudo rm -rf /opt/hostedtoolcache/CodeQL
-          echo "CodeQL removed."
-
           # Remove ghcup if not needed
           sudo rm -rf /usr/local/.ghcup
           echo "ghcup removed (if not needed)."
@@ -199,25 +195,25 @@ jobs:
       - name: Set Rust toolchain
         run: rustup override set ${{ env.RUST_VERSION }}
 
-      - name: Caching
-        uses: Swatinem/rust-cache@v2
+      # - name: Caching
+      #   uses: Swatinem/rust-cache@v2
 
-      - name: Cache Extra Binaries
-        id: cache-binaries
-        uses: actions/cache@v4
-        with:
-          path: |
-            ${{ env.HOME }}/.cargo/bin/addr2line
-            ${{ env.HOME }}/.cargo/bin/flamegraph
-            ${{ env.HOME }}/.cargo/bin/inferno-*
-          key: ${{ runner.os }}-${{ env.RUST_VERSION }}-extra-binaries
+      # - name: Cache Extra Binaries
+      #   id: cache-binaries
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: |
+      #       ${{ env.HOME }}/.cargo/bin/addr2line
+      #       ${{ env.HOME }}/.cargo/bin/flamegraph
+      #       ${{ env.HOME }}/.cargo/bin/inferno-*
+      #     key: ${{ runner.os }}-${{ env.RUST_VERSION }}-extra-binaries
 
-      - name: Cache ethrex_l2
-        id: cache-ethrex-l2
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.HOME }}/.cargo/bin/ethrex_l2
-          key: ${{ runner.os }}-${{ env.RUST_VERSION }}-ethrex-l2-${{ hashFiles('cmd/ethrex_l2/Cargo.lock') }}
+      # - name: Cache ethrex_l2
+      #   id: cache-ethrex-l2
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ${{ env.HOME }}/.cargo/bin/ethrex_l2
+      #     key: ${{ runner.os }}-${{ env.RUST_VERSION }}-ethrex-l2-${{ hashFiles('cmd/ethrex_l2/Cargo.lock') }}
 
       - name: Change perf settings
         run: |
@@ -332,28 +328,28 @@ jobs:
           path: "reth"
           ref: main
 
-      - name: Caching
-        uses: Swatinem/rust-cache@v2
-        with:
-          workspaces: ". -> target \
-            ./reth -> ./reth/target"
+      # - name: Caching
+      #   uses: Swatinem/rust-cache@v2
+      #   with:
+      #     workspaces: ". -> target \
+      #       ./reth -> ./reth/target"
 
-      - name: Cache Extra Binaries
-        id: cache-binaries
-        uses: actions/cache@v4
-        with:
-          path: |
-            ${{ env.HOME }}/.cargo/bin/addr2line
-            ${{ env.HOME }}/.cargo/bin/flamegraph
-            ${{ env.HOME }}/.cargo/bin/inferno-*
-          key: ${{ runner.os }}-${{ env.RUST_VERSION }}-extra-binaries
+      # - name: Cache Extra Binaries
+      #   id: cache-binaries
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: |
+      #       ${{ env.HOME }}/.cargo/bin/addr2line
+      #       ${{ env.HOME }}/.cargo/bin/flamegraph
+      #       ${{ env.HOME }}/.cargo/bin/inferno-*
+      #     key: ${{ runner.os }}-${{ env.RUST_VERSION }}-extra-binaries
 
-      - name: Cache ethrex_l2
-        id: cache-ethrex-l2
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.HOME }}/.cargo/bin/ethrex_l2
-          key: ${{ runner.os }}-${{ env.RUST_VERSION }}-ethrex-l2-${{ hashFiles('cmd/ethrex_l2/Cargo.lock') }}
+      # - name: Cache ethrex_l2
+      #   id: cache-ethrex-l2
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ${{ env.HOME }}/.cargo/bin/ethrex_l2
+      #     key: ${{ runner.os }}-${{ env.RUST_VERSION }}-ethrex-l2-${{ hashFiles('cmd/ethrex_l2/Cargo.lock') }}
 
       - name: Change perf settings
         run: |
