--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -40,5 +40,10 @@ jobs:
       - name: Run L2 integration prover_client
         run: |
           cd crates/l2
+          cp configs/config_example.toml configs/config.toml
+          sed -i "" "s/listen_ip = \"127.0.0.1\"/listen_ip = \"0.0.0.0\"/" configs/config.toml
+          sed -i "" "s/sp1_deploy_verifier = false/sp1_deploy_verifier = true/" configs/config.toml
+          sed -i "" "s/dev_mode = false/dev_mode = true/" configs/config.toml
           cp configs/prover_client_config_example.toml configs/prover_client_config.toml
-          make ci_test_retrigger
+          sed -i "" "s/sp1_prover = \"mock\"/sp1_prover = \"cpu\"/" configs/prover_client_config.toml
+          make ci_test_prover_client
